Brief implementation of time measurement.

--- a/SetTwo/Makefile
+++ b/SetTwo/Makefile
@@ -1,8 +1,16 @@
 CC=gcc -Wall
 
 build:
-	$(CC) main.c file_manager.h  file_manager.c -o main
+	$(CC) main.c file_manager.h  file_manager.c time_full.h time_full.c -o main
 
-test:
-	./main test 10 10 sys
+test1:
+	./main test 4 10 sys
 
+test2:
+	./main test 512 10 sys
+
+test3:
+	./main test 4096 10 sys
+
+test4:
+	./main test 8192 10 sys
