Added second part of first task in fourth set

--- a/SetFour/Makefile
+++ b/SetFour/Makefile
@@ -2,6 +2,11 @@ CC=gcc -Wall
 
 build:
 	$(CC) main.c -o main
+	$(CC) main_fork.c -o main_fork
+	chmod a+x date.sh
 
 run:
 	./main
+
+run-fork:
+	./main_fork
