Implemented second task from set six

--- a/SetSix/Makefile
+++ b/SetSix/Makefile
@@ -9,8 +9,8 @@ build-task1:
 	$(CC) ./Task1/server.c ./Task1/contract.h -o ./Task1/server
 
 build-task2:
-	$(CC) ./Task2/client.c -o ./Task2/client
-	$(CC) ./Task2/server.c -o ./Task2/server
+	$(CC) ./Task2/client.c ./Task2/contract.h -o ./Task2/client -lrt
+	$(CC) ./Task2/server.c ./Task2/contract.h -o ./Task2/server -lrt
 
 run-task1:
 	./Task1/server &
