Simple operation on shared memory

--- a/SetSeven/Makefile
+++ b/SetSeven/Makefile
@@ -1,5 +1,17 @@
+.PHONY: all
+
 CC=gcc -Wall
 
-Task1/main: Task1/main.c
+
+all: Task1/main Task1/client Task1/barber
+
+Task1/main: Task1/main.c Task1/contract.h
+	ipcrm --all=shm
+	ipcrm --all=sem
 	$(CC) $^ -o $@
 
+Task1/client: Task1/client.c Task1/contract.h
+	$(CC) $^ -o $@
+
+Task1/barber: Task1/barber.c Task1/contract.h
+	$(CC) $^ -o $@
